# genpoly-fpg

./: CMakeLists.txt  README.md  default.fpg
data/: info.txt  translation_0.graphml  translation_1.graphml  translation_10.graphml  translation_100.graphml  translation_1000.graphml  translation_11.graphml  translation_12.graphml  translation_13.graphml  translation_14.graphml  translation_15.graphml  translation_16.graphml  translation_17.graphml  translation_18.graphml  translation_19.graphml  translation_2.graphml  translation_20.graphml  translation_200.graphml  translation_3.graphml  translation_30.graphml  translation_300.graphml  translation_4.graphml  translation_40.graphml  translation_400.graphml  translation_5.graphml  translation_50.graphml  translation_500.graphml  translation_6.graphml  translation_60.graphml  translation_600.graphml  translation_7.graphml  translation_70.graphml  translation_700.graphml  translation_8.graphml  translation_80.graphml  translation_800.graphml  translation_9.graphml  translation_90.graphml  translation_900.graphml
includes/: argparse.h  eventQueue.h  holeInsertion.h  initialPolygonGenerator.h  insertion.h  polygon.h  polygonTransformer.h  predicates.h  randomGenerator.h  selectionTree.h  settings.h  statistics.h  stentry.h  tedge.h  timer.h  tpolygon.h  translation.h  translationKinetic.h  translationRetriangulation.h  triangle.h  triangulation.h  vertex.h
scripts/: generator
src/: eventQueue.cpp  holeInsertion.cpp  initialPolygonGenerator.cpp  insertion.cpp  main.cpp  polygon.cpp  polygonTransformer.cpp  predicates.cpp  selectionTree.cpp  settings.cpp  statistics.cpp  stentry.cpp  tedge.cpp  tpolygon.cpp  translation.cpp  translationKinetic.cpp  translationRetriangulation.cpp  triangle.cpp  triangulation.cpp  vertex.cpp
